--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TIY4170IQaeEvl+PObAOOPEzIYewNTYDn0rc7OI2MM5dLhTvX8dQ91mxlvBJHQXl+At+MK5FoB24ylELY6/FZyxo2XD1vTAExOUdryMkEXV8+D2DdoQjNRUxvRhUi1EW">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1m5QVJ1DLo0pOoVE41jEYNTFT8aH04krXlRNPt+FzfnYDcusNHPokoohizgiJbC1gsmHFuu9iNYXTrQ+vaYFPLtZ1xNtf5I8Jrah9uaaKJKwfUQ5BE5wddLtz5O4HXLq">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
