--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/e">make a site for free</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Nz6Hyn2EXQUCZ6vzyBYcl5cxxomyxufKizRiF91h2TgGKvm7XmXQGnMhcMaJd/PPoY7l/Eahoqui9pJfu4p09EDKIBnohl7K/WD3CWfbniTvRNt54U8H2XyZ+7im5Ybh">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VKWnYAzgs/LgTuawL8QroNMwAqwLAVmU3fYS0Raep7g+FtpZEiKCSpPwl3ywvZYTDxq6gQEc5RHDjqFzBY+mP5iORV+SXSVatjTqwTv0hfc92C2JUzKU182JPDJLCZ/H">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
