--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1m5QVJ1DLo0pOoVE41jEYNTFT8aH04krXlRNPt+FzfnYDcusNHPokoohizgiJbC1gsmHFuu9iNYXTrQ+vaYFPLtZ1xNtf5I8Jrah9uaaKJKwfUQ5BE5wddLtz5O4HXLq">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="B17BC3Y3QZpj/be6eX6dAytXWfO/hpbjoFCaZZkA5/HKO4Cq87p3sLe32aGs2Lm95hEu0fXkQAWClWP3yNZ7XnoY73p0vGLe5QyrupKto+fXoIkLTh0Uz7e7aGP1UUcZ">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
