--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KI3MUg0Woi6lylEDY3f+mkk+DwWcxkCBnCFY8FOK+n4un6RrAYCNKxacv7qoqzmGH9UKMmo1o0VbIO28nK7GWeP24bznXeJy9unRSyJOrmOL4D7NXw2VdIm6MxRgn8gf">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="i7hTCLwlrJC2s60jxzD7GYylvyD5Q7Z9VTGw1Rl2OMGDTFKR4cuVpE6ivdHOMqsKvtTARi5J/tjUBFba+Mt/eFMZtyOYwr7wZuXJxH1KgbcEeCTHQBt+g4n7mMR5puXb">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
