--- a/newsletter.html
+++ b/newsletter.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section article content1 cid-rGLUGiirC6" id="content1-9a">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section article content1 cid-rGLUGiirC6" id="content1-9a">
     
      
 
