create github pages

--- a/joe.html
+++ b/joe.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create a website for free</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dZEUaT9N6J4Msbgztaa3yZBby5YZB9Jg971eKm9Tml6LV33snRwstirqc7pd6Nf7IhOm+yf5EYdRS0ZpG3ORPxJOs64vmNK4+MteepRYX2L9LcbwRa2vp9LfdDjj/3/p">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vHuaf67KY35bMHQLklkRoPXYfnovHOCWk+sYWp/ZBAxePbr9pHEjvJEvJZHR7i7lOO0+UHplVx0DIK3BBNOhYB7WXwiM/gR1uLK2TqvTSri/P+/xVdnSmjDPrsnuPEJD">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
