--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -125,7 +125,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJu45q-rhtPYgRx17KrfbYIwQ" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 
@@ -141,7 +141,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lQYEPs9vEzgzd9kzUkQ0BU6RQT1SDQoTZqAY1XFj+EO0xy0kUAnAd4yveoQd0sjxdIJok7JGB845cmCTk94F1wgtlfK6i51rRWFnt4sPFnUHkik3onqVp7EoZgW+Z2J9">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xDL2h05orYFRNXPz7Sn+E3ecQHX8mfSsWKchacCkhItGa/uNw3Zod6dT2A24Hj88tUJ5aIIif3CqsnCaTjMKa5lyVjmtbZmhstRybrBPKMrjxiYNIQ+V+0FzTTiPd/O8">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
