--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own website for free</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7DiVDi4LC9wWiIdrbJAoj1Myq5wWvVE6crIGYlUpM1UQVbClmAjz8NPE2RyF+Fkde/sZe8M1RtT+du5xlvmmyjECTlb7xtfShrLavJfvwleL61B0xQFTetMYk2DtT+DM">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ciXNATBIQuuDL/KmafBmcQ4sgxhKv6kd6xHQiUFBs9vXL1A5lIVkLXmZunOae88P+LBSbRPPygpV+mcdAjin+pyPDEHjRELgimTWDIZUN1nbFR/iSTFkSOSvvbbBrSul">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
