--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="677mmq1PWOw9P2P7ys8OIpX4yxWbUJF7DKMNUoTiEDD2GFW3trbZpe+rYvkkzfSiIaGHmNAsB1I8HDTUuqnM5pPZ/C6eQagXWEVuMZvuk+B1DyiZzBmIPIlaWUG+Hktp">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="V5RFgEH53fmB03Y7uI9GZAOqfi5XffY2wtuiwZL0qdEAzJ8kHFuxq/kY5h3aG1ZLxqQs+JuDkvvMoyBgU4g+QU77kOXVe/yx9IQj2s4nOaU54/4KGl+e678xugeh4sYb">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
