create github pages

--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ciXNATBIQuuDL/KmafBmcQ4sgxhKv6kd6xHQiUFBs9vXL1A5lIVkLXmZunOae88P+LBSbRPPygpV+mcdAjin+pyPDEHjRELgimTWDIZUN1nbFR/iSTFkSOSvvbbBrSul">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JN4a8PdIj8Rk98AlE2YReWj5kODDNxt4cn0OOhgSlZ8lQrIFTl5kl7mZ6be28Oef3EkOEzkRTHd87kPOozuh6TEJf96hDzgY0zZp++7364W7sH0tavi1sgjSXhZbCNL7">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
