--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1ekU8oCCvgPKZJCqZBdatSD663JRypiuDB4+tfm4P4tB+bYd1gaBN/jYKeQDx0CvpL4wQ+KNfuvaMze8Eg3glSoyGvAiHhR9zIGMfaLwdeW/QFdfFg9bvZrLUyZDYfIN">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jdiXICefzFQwJAasB20WRtZ7OFAw5pBo5exQEH8MMAEwDbrTTttqouJlUWS8j9zCNYWAvPHb7Si5jvdOFxVF8KKIp077Ln1fqutzQE7Ie8Wyh6HBaDW5ACv9w0Y+1U1V">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
