--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
 
     
 
@@ -449,7 +449,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ec8xNbQhsT/0TELMYysQe6kSvkqHyk04h0Duox9ds1WWWgzBVdC4yw05tc+7L5rfyKd6lW+1go1E7WrvwHJG47IpHM6bEMgzg4v4FQbRVTcA4Ym8QyHiuqppD+RG33yp">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HiFPx/xQAEdZCAl0FunrS4WYiS0JXa057xFksbuf41OqiiPQ6E4ojGku9hn7pvC5Yo667nBU/BtoIa0XO5DgnT6kmL0pWg9Se8slTWXLPBSfpPnBf0nFhvn0A6e9Yraj">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-6y">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
