--- a/products.html
+++ b/products.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a website for free</a></section><section class="mbr-section content5 cid-r6QfwbDyCS" id="content5-49">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section content5 cid-r6QfwbDyCS" id="content5-49">
 
     
 
@@ -129,7 +129,7 @@
             <div class="card col-12 col-md-6 align-center col-lg-4">
                 <div class="card-wrap">
                     <div class="card-img">
-                        <img src="assets/images/mbr-1-1036x691.jpg" alt="Mobirise" title="">
+                        <a href="proposal.html"><img src="assets/images/mbr-1-1036x691.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box p-5">
                         <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5"><strong>
@@ -141,13 +141,13 @@
             <div class="card col-12 col-md-6 align-center col-lg-4">
                 <div class="card-wrap">
                     <div class="card-img">
-                        <img src="assets/images/mbr-1-1118x745.jpg" alt="Mobirise" title="">
+                        <a href="proposal.html"><img src="assets/images/mbr-1-1118x745.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box p-5">
                         <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5"><strong>
                             Commercial</strong></h4>
                         <p class="mbr-text mbr-fonts-style mbr-white display-7">
-                            Commercial Insurance is complicated and you have big dreams to cover. Barrett Insurance can share your burden by helping you design an insurance package that is right for your business.
+                            Commercial Insurance is complicated and you have big dreams to cover. Barrett Insurance can share your burden by helping you design an insurance package that is right for your business.<br><br>
                         </p>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
             <div class="card col-12 col-md-6 align-center col-lg-4">
                 <div class="card-wrap">
                     <div class="card-img">
-                        <img src="assets/images/mbr-1092x728.jpg" alt="Mobirise" title="">
+                        <a href="proposal.html"><img src="assets/images/mbr-1092x728.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box p-5">
                         <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5"><strong>
@@ -181,7 +181,7 @@
             <div class="card col-12 col-md-6 align-center col-lg-4">
                 <div class="card-wrap">
                     <div class="card-img">
-                        <img src="assets/images/mbr-936x624.jpg" alt="Mobirise" title="">
+                        <a href="proposal.html"><img src="assets/images/mbr-936x624.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box p-5">
                         <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5"><strong>Homeowners &amp; Renters Insurance</strong></h4>
@@ -192,10 +192,10 @@
             <div class="card col-12 col-md-6 align-center col-lg-4">
                 <div class="card-wrap">
                     <div class="card-img">
-                        <img src="assets/images/mbr-1026x684.jpg" alt="Mobirise" title="">
+                        <a href="healthproposal.html"><img src="assets/images/mbr-1026x684.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box p-5">
-                        <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5"><strong>Life, Health &amp; Medicaid Insurance</strong></h4>
+                        <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5"><strong>Life, Health &amp; Medicare Insurance</strong></h4>
                         <p class="mbr-text mbr-fonts-style mbr-white display-7">Our life and health experts specialize in designing group policies for businesses and plans that meet your individual needs.<br><br></p>
                     </div>
                 </div>
@@ -203,7 +203,7 @@
             <div class="card col-12 col-md-6 align-center col-lg-4">
                 <div class="card-wrap">
                     <div class="card-img">
-                        <img src="assets/images/mbr-1002x752.jpg" alt="Mobirise" title="">
+                        <a href="proposal.html"><img src="assets/images/mbr-1002x752.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box p-5">
                         <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5"><strong>Farm &amp; Country Estate Insurance</strong></h4>
