create github pages

--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own website for free</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="G2gBdrxAQw6EPVQMB2E1HXOwVGnFNFJNny7DGaMoFoBGp1WhQ0YUfHonF76ig4oai2ymr1y9QchI9RukWd4hBO//q1oUYDP1aRW7qso5QOF4SXGaE8php0KuqZgTz6UV">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PzTPwQ8Drwt2W30VRZxPWqa9yNU0aQvp8gEmbhbTgbpsfIuy4RvmrKtdMzSpIEfhAcuppMUl+dSSUENl0L5KFcdJnjmCYI077j/bsIGlmEfG/4XoBFg9vVbm2hpuA6Cz">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
