--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gBSXKpq993eFeK1K79diJ3xQLsiIEUc0Y7E9u6NMmGtzluDI/Qa3+Br94XgSAl3vvK7i27Y5z+V0YN2y8JyM/sORKY3GeLem2lDLnEsRJnIZ46SqQcS3gEtJlgCRKS76">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IgVm+FYmJhkbnGDEjJcHPYxKKUy3NSvucMcKUm2AVvEYQ5+zktmsykarKnnDnePLOXFaGiB9i6PrmHdtTYdWtLXTgkXHUy2LcaOEJrSXlaHN+GUL26/rycJ1qd1h1JFg">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
