--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PzTPwQ8Drwt2W30VRZxPWqa9yNU0aQvp8gEmbhbTgbpsfIuy4RvmrKtdMzSpIEfhAcuppMUl+dSSUENl0L5KFcdJnjmCYI077j/bsIGlmEfG/4XoBFg9vVbm2hpuA6Cz">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KM9hhRF32kgpWA7KA6+Yb+rx1H1udK0KTFDg+R+LG1mW5YENjPfitLhimiQvWVCKFK9JS/3uZUlpygpIzVmT147ns0zm62IW0FAq9XIfkMvO6WWlEIYAIFKUXgzVHeT/">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
