--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a site for free</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="axMTIRn2yyUcyhzQQhlZYTNyeLo4TpwWftc816PXSDV8YcWr3rl4athH+zToKUd/UPi+zt7anpgszVcpVIa6ZANHCXCCkjm1f/77p05EAhPLC/WkWIXV+Heais21fxMo">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zZWBBCWc6dzArE1yxGosjlqDrLxFzFpsZGzKzqL1GDaJVF2U28+eqq2gz1Z41UtgtliP+DcHIXjwtMVuyxAefSoKRLa6Igcr3jiv3rGacymfe/XTl20LWFueSEstNQeg">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
