--- a/ben.html
+++ b/ben.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xuUM7l4vHAC6Fwj3WRESAiiriTBu5zxsGqMNPgkcx4UmN/PNYB/tDo31c2x7ol0C/UHNdhApW+3JytUTaoAfrFWGNvdalICeULCaPn0h2K8NGA/0S1jWFt/M+DngmlSr">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="N9OAoHnZtwbDtpcHtN5c5cuoEo7MYIe3meVMhz5A1n4oq0LEDOl3R1S+T3ZtLH3xoQ2ZPvTO+mD0Uk3eATIHIOpZIT0pENhbsCYlOAk0AeQHLLS4g+OmE/xjX3P4VZV8">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
