--- a/community.html
+++ b/community.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -165,7 +165,7 @@
 
         <div class="media-container-row mt-5 pt-3">
             <div class="mbr-figure" style="width: 40%;">
-                <img src="assets/images/lopresto-megan-428x391.jpg" alt="Mobirise" title="">
+                <img src="assets/images/bensch-hannah-carla-stewart-760x950.jpg" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -182,14 +182,12 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Megan LoPresto!
+                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, and the first recipient of the 2020-21 school year, Hannah Bensch!
+<br><br>Hannah is a senior at Will Carleton Academy. She has had two years of vocal lessons, eight years of piano lessons, and two years of trumpet lessons at Hillsdale College. She has also been active on the yearbook committee for five years.
 <br>
-<br>Megan is a senior at Jonesville High School (JHS). She remains a member of Future Farmers of America and National Honor Society. She is also captain of the varsity soccer team and one of the JHS class of 2020 valedictorians. <br>
-<br>According to her FFA advisor Mrs. Kim Sailsbury, ”This year, Megan served as President of the JHS FFA chapter and was given the title as captain of the soccer team.  During Megan's time in the FFA she has won four 1st place awards in the Arthur Berkley Science Fair and has competed in the FFA National Science Fair.  Because of her dedication to the study of science, Megan was a STAR finalist for the Stars Over Michigan at Michigan State University. Megan has also been active in showing livestock from lambs to cattle.  Megan is a scholar, a leader, a friend, and a gem to our programs.”
-<br>
-<br>Next year, Megan plans to attend Michigan State University to study agriculture, food and natural resource education with plans on becoming an agricultural teacher one day. 
-<br><br>Congratulations, Megan!
-Keep up your great work.<br></p>
+<br>According to the Will Carleton Academy staff, “Hannah was a diligent distance learner this past spring. Seeing increased self-confidence and organization, Hannah’s teachers have been impressed by her academic growth and maturity, specifically noting extraordinary results in her Early Middle College credentialing.”
+<br><br>Hannah plans to study human psychology as well as marine biology in college.
+<br><br>Congratulations, Hannah! Keep up your great work.<br></p>
                             </div>
                         </div>
                     </div>
@@ -218,7 +216,7 @@ Keep up your great work.<br></p>
                             <div class="col-md-12">
                                 <p class="mbr-text py-5 mbr-fonts-style display-7"><strong>(in alphabetical order by first name) 
 </strong><br>
-<br>Abby Palmiter<br>Adrianna Aemisegger<br>Alecia Hodge<br>Alejandro Jeminez<br>Alexis Higgins<br>Allyson Rubley<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ariana Norman<br>Ariana Nubel<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Braliann Francis<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Bills<br>Caleb Brink<br>Carson Laney<br>Carter Riley<br>Cecilia Mende<br>Ciara Small<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hannon Attareb<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Isabella Thielen<br>Jacob Hart<br>Jacob Scoville<br>James Baughman<br>James Fuller<br>Jay Close<br>Jena Fellabaum<br>Jeremy R.<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaitlyn Knapp<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Maci Svacha<br>Madalynn Guideau<br>Magali Perez<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Max Thielen<br>Maxim Hayes<br>Megan LoPresto<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Natalie E<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Raymon Brown<br>Rebecca Butters<br>Ryan Reiniche<br>Samara Voigt<br>Sara Cole<br>Sophie Crites<br>Taylor Vogelsong<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Trenton Wortham<br>Zach WIlson</p>
+<br>Abby Palmiter<br>Adrianna Aemisegger<br>Alecia Hodge<br>Alejandro Jeminez<br>Alexis Higgins<br>Allyson Rubley<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ariana Norman<br>Ariana Nubel<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Braliann Francis<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Bills<br>Caleb Brink<br>Carson Laney<br>Carter Riley<br>Cecilia Mende<br>Ciara Small<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hannon Attareb<br>Hannah Bensch<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Isabella Thielen<br>Jacob Hart<br>Jacob Scoville<br>James Baughman<br>James Fuller<br>Jay Close<br>Jena Fellabaum<br>Jeremy R.<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaitlyn Knapp<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Maci Svacha<br>Madalynn Guideau<br>Magali Perez<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Max Thielen<br>Maxim Hayes<br>Megan LoPresto<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Natalie E<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Raymon Brown<br>Rebecca Butters<br>Ryan Reiniche<br>Samara Voigt<br>Sara Cole<br>Sophie Crites<br>Taylor Vogelsong<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Trenton Wortham<br>Zach WIlson</p>
                             </div>
                         </div>
                     </div>
