create github pages

--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RLS3Pkjuzc/0EtwebwgWssqe/b/QDnud4KiooxA9W0z/b/8wEWu6euAqP3MAmEeGcJncLk2m/CyxCgGlTfeReJ8bU7mVF98q2Y6blGWtxjtWx3sIS0BM4UnmpqBN6998">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qYnaKPSAOGOymeHPmvj1ge9kmLvVjfxOWRUgm/VWsB9XzkuXHvTjDosV1AY3OVla2D3n5wqqHwFoQeYPMDbb4Q3yNNfFFPB9UYshXL9lYpEquSupqQz2WB0nslPtzaYg">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
