--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -141,7 +141,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bz3SK8IY3i9Kq9lRWDcuPkumL0hJgbwbzXr+TlXUwCMz/NmFt8L9ayw6JHv3fD6WPoU9DlPT9HMwwmuqkKk1BVibzof0RpohH6AX3mXQFx5fQVP5NYO++z3nqE9Q0ccz">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IY0pq8Dpa+lcgdvwIqwK7fZ4sgYO4/KJPJ3fsLY7FzmeVJ5+uKCrvG14MQOKHrmvr+e1wofqFG+IYNd21wGtk3ixORTz2TfWPRU1i32lx1xgHpnjTMKM7Fj/n8GyJ4mI">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
