--- a/newsletter.html
+++ b/newsletter.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section once="" class="cid-r6KAjJ3ZSX" id="footer6-6u">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="" class="cid-r6KAjJ3ZSX" id="footer6-6u">
 
     
 
