create github pages

--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IkxcBnFid3RMgO6jFYafFSfn8BNuybsN1WnYzIRw0t8Q2G1pGXkKxYi5m6i09DvRKWMw4mselDAbYQgzEC0PSrQAe3hJQ8lHDF+YuR1s6jSeF7I7+/XXheLcw0QY0XGl">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="eC6YRsPtLNmAm+ITAq7PnMxuf9nBRoUg3EgC2WiBAi9i8PEGQvw4sPZRA0OUUqfFDkqFi2J6U8DNv7qfkxTaO35Nn2r5MwYmMePNbRdeLtXlWKTLY0BPIMVEYmtSlgF6">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
