--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qYnaKPSAOGOymeHPmvj1ge9kmLvVjfxOWRUgm/VWsB9XzkuXHvTjDosV1AY3OVla2D3n5wqqHwFoQeYPMDbb4Q3yNNfFFPB9UYshXL9lYpEquSupqQz2WB0nslPtzaYg">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FwQzL6LdD4Rakk1U6i3bcv8j68RHQA+g6gmLDt3bZON9tXxY9abKM99P10Rj+2sHeYBSAEIYmk3XxLCES8GjefYbv9ViIC86A+hmEJ7nL01Z/M4gVkjfSUwIO5XBzfbj">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
