--- a/newsletter.html
+++ b/newsletter.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section once="" class="cid-r6KAjJ3ZSX" id="footer6-6u">
+<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section once="" class="cid-r6KAjJ3ZSX" id="footer6-6u">
 
     
 
